# terminai-redact

./: .gitignore  .golangci.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ner  Dockerfile.ner-base  LICENSE  README.md  SECURITY.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release-tag.yml  ner-base.yml  prepare-release.yml  release.yml
assets/: README.md
cmd/redactctl/: engine.go  main_test.go  redact.go  restore.go  root.go  version.go
config/: config.yaml  viper.go
crates/redact-api/: Cargo.toml
crates/redact-cli/: Cargo.toml
crates/redact-core/: Cargo.toml
crates/redact-ner/: Cargo.toml
crates/redact-wasm/: Cargo.toml
crates/redact-wasm/src/: lib.rs
docs/benchmarks/: README.md  presidio-latency-20260418-175909.txt  presidio-throughput-20260418-175909.txt  redact-latency-20260418-175909.txt  redact-throughput-20260418-175909.txt  results-20260418-175909.md
docs/security/: dependabot-review-2026-05-25.md  dependabot-review-2026-05-26.md  dependabot-review-2026-05-29.md  dependabot-review-2026-05-31.md  dependabot-review-2026-06-01.md  dependabot-review-2026-06-02.md  dependabot-review-2026-06-03.md  dependabot-review-2026-06-04.md  dependabot-review-2026-06-05.md  dependabot-review-2026-06-06.md  dependabot-review-2026-06-07.md  dependabot-review-2026-06-08.md  dependabot-review-2026-06-09.md  dependabot-review-2026-06-10.md  (+7 more)
pkg/redaction/: engine.go  (+5 more)
scripts/: benchmark-comparison.sh  update-version.sh
templates/: uk_gdpr_compliance.yaml
tools/: import_gitleaks_rules.py
(+20 files in other folders)
